   * functions to easily create one frame animations, for deprecated images
   * improved (underwater) merfolk village
   * (internal) make attack animations work like all other animations
   * backport latest SDL_ttf change, fix ascender/descender issue for DejaVu
   * fix crash when using zoom keys in the main lobby
   * new utils: codecomp codeextract codeglyphs codelist, for font analysis

Version 1.1:
 * campaign server
   * support new "timestamp" attribute
   * save persistent attributes in the campaign data
     * "name" is treated as directory name, so use campaign_name (#4525)
     * SECURITY: ensure file and directory names on upload match campaign name
   * support filtering on campaign_list requests: name, last update time
     (before or after), language of translation
   * campaign_list response now contains the time the request was processed
   * campaign_list response now contains information about translations
   * fixed problem with duplicate translations being saved with each upload
   * added a passphrase change function
   * deleting campaigns, campaign file is now deleted, not reduced to zero size
 * campaigns:
   * Eastern Invasion
     * fix Undead fighting each other in Weldyn Besieged (#4386)
     * fix Undead not recruiting after leader change in The Crossing (#4393)
     * The Drowned Plains: abandonded villages no longer require village.png
   * Heir to the Throne
     * fixed Delfador talking to himself in Valley of Statues (#4440)
     * fixed Home of the North Elves inaccurate victory condition (#4644)
     * Isle of Anduin: reduced difficulty, added mage tips, move_unit_fake fix
     * Blackwater Port: added tips about loyal units, move_unit_fake fix
     * Bay of Pearls: traits for mermen, you get a hunter and initiate, added
       ford to help units cross, hunter and initiate available after winning
     * Isle of the Damned: replaced some forest with road, can recall mermen,